--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,13 @@
 {
+    "version": 2,
     "rewrites": [
         {"source": "/(.*)", "destination": "/"}
-    ]
+    ],
+    "routes": [
+        {
+          "src": "/(.*)",
+          "dest": "/",
+          "continue": true
+        }
+      ]
 }
